--- a/package.json
+++ b/package.json
@@ -33,34 +33,35 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.10.7",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "^25.0.10",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/parser": "^8.53.1",
     "@uploadthing/react": "^5.7.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "^14.0.1",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.4",
     "lucide-react": "0.359.0",
-    "next": "^14.0.1",
+    "next": "^16.1.4",
     "next-auth": "^4.24.4",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.4.6",
     "postcss": "8.4.28",
     "posthog-js": "^1.335.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-cytoscapejs": "^2.0.0",
     "react-day-picker": "^8.9.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.47.0",
     "recharts": "^2.9.2",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
+    "typescript": "^5.9.3",
     "uploadthing": "^5.7.4",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
@@ -69,7 +70,7 @@
   "devDependencies": {
     "@types/react-cytoscapejs": "^1.2.5",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
     "prettier": "3.0.3"
   }
 }
