--- a/package.json
+++ b/package.json
@@ -15,23 +15,26 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@faker-js/faker": "^8.2.0",
     "@hookform/resolvers": "^3.3.2",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.22.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@stripe/stripe-js": "^8.6.4",
     "@tanstack/react-table": "^8.10.7",
     "@types/node": "^25.0.10",
     "@types/react": "^18.3.27",
@@ -43,14 +46,13 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.4",
     "lucide-react": "0.359.0",
     "next": "^16.1.4",
-    "next-auth": "^4.24.4",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "postcss": "8.4.28",
     "posthog-js": "^1.335.0",
+    "raw-body": "^3.0.2",
     "react": "^18.3.1",
     "react-cytoscapejs": "^2.0.0",
     "react-day-picker": "^8.9.1",
@@ -58,6 +60,7 @@
     "react-hook-form": "^7.47.0",
     "recharts": "^2.9.2",
     "sharp": "^0.32.5",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -71,6 +74,9 @@
     "@types/react-cytoscapejs": "^1.2.5",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
-    "prettier": "3.0.3"
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.35",
+    "prettier": "3.0.3",
+    "prisma": "^5.22.0"
   }
 }
