--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@stripe/stripe-js": "^8.6.4",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-table": "^8.10.7",
     "@types/node": "^25.0.10",
     "@types/react": "^18.3.27",
@@ -47,9 +48,11 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "0.359.0",
     "next": "^16.1.4",
     "next-auth": "^4.24.13",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "postcss": "8.4.28",
     "posthog-js": "^1.335.0",
@@ -76,7 +79,7 @@
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.35",
+    "eslint-config-next": "15.1.6",
     "prettier": "3.0.3",
     "prisma": "^5.22.0"
   }
