--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/parser": "^8.53.1",
     "@uploadthing/react": "^5.7.0",
+    "adm-zip": "^0.5.16",
     "autoprefixer": "10.4.15",
+    "axios": "^1.13.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -75,6 +77,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/react-cytoscapejs": "^1.2.5",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
